--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <header><div class="header inner"></div></header>
+    <header class="header"><div class="container"></div></header>
     <main>
-      <div class="inner">
-        <section><div class="hero"></div></section>
-        <section class="content">
+      <section class="hero-banner">
+        <div class="container"></div>
+      </section>
+
+      <section class="call-to-action">
+        <div class="container">
           <div class="column"></div>
           <div class="column"></div>
-        </section>
-      </div>
+        </div>
+      </section>
+
+      <footer class="footer"><div class="container"></div></footer>
     </main>
-    <footer class="footer"><div class="container"></div></footer>
   </body>
 </html>
